# gchq-shading-puzzle2015

./: LICENSE  gchq-shading-puzzle2015.cabal  stack.yaml
data/: puzzle.json
lib/GCHQ/Data/: Puzzle.hs
lib/GCHQ/Data/Puzzle/: Internal.hs
output/: solution.json
renderer/: Main.hs
solver/: Main.hs
