name:                gchq-shading-puzzle2015
version:             0.1.0.0
synopsis:            Solver/renderer for GCHQ's 2015 Christmas Shading Puzzle
description:         Please see README.md
homepage:            http://github.com/jship/gchq-shading-puzzle2015#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Shipman
maintainer:          jasonpshipman@gmail.com
copyright:           Copyright (C) 2015 Jason Shipman
category:            Games
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     GCHQ.Data.Puzzle
  ghc-options:         -O2 -Wall
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , ersatz >= 0.3.1 && < 0.3.2
  default-language:    Haskell2010

executable solver
  hs-source-dirs:      solver
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , bytestring
                     , gchq-shading-puzzle2015
  default-language:    Haskell2010

executable renderer
  hs-source-dirs:      renderer
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , gchq-shading-puzzle2015
                     , gloss
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jship/gchq-shading-puzzle2015
